force-app/main/default/objects/Payment_History__c/Payment_History__c.object-meta.xml
<CustomObject>
    <label>Payment History</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Payment History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>