force-app/main/default/objects/Payment_History__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Payment History</relationshipLabel>
    <relationshipName>Payment_History</relationshipName>
    <type>Lookup</type>
</CustomField>