force-app/main/default/objects/Payment_History__c/fields/Status_formula__c.field-meta.xml
<CustomField>
    <fullName>Status_formula__c</fullName>
    <formula>IF(
    ISPICKVAL(Status__c, &quot;Failed&quot;),
    &quot;&lt;strong&gt;&lt;span style=\&quot;color:red;\&quot;&gt;Failed&lt;/span&gt;&lt;/strong&gt;&quot;,
    TEXT(Status__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>