force-app/main/default/objects/Payment_History__c/fields/Subscription_Contract__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Contract__c</fullName>
    <description
  >The subscription contract (Contracts__c) this payment belongs to. Replaces the old Contract__c master-detail to standard Contract.</description>
    <label>Contract</label>
    <referenceTo>Contracts__c</referenceTo>
    <relationshipLabel>Payment History</relationshipLabel>
    <relationshipName>Payment_History</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>